1) Incorporated var result to document.write and return "Hello Cole!!" (hello + name + !!)
2) Incorporated var threeNames and var result to document.write and 
return "Hello Cole, MaryClare, and Adrema Justice!!" (hello + name + !!)

3)Created var classes and var result = getClasses(classes)
Return classes (classes = (list of course schedule written out in 
quotes) + "." /
Requested document.write(result)

4)Created var fiveNumbers, then var result = labelOrder(fivenumbers)/
- Made fiveNumbers = [1-5] array
- Made var called newArray with empty quotation marks for each of the 
five Numbers
- Created newArray indexes [0-4] and made them equal to "first-fifth" + 
fiveNumbers[0-5] all individually
-return(newArray)

5)set variables w, l, and h = to 3, 6, 9
-created a variable for volume = w * l * h
- returned (volume)
-Requested document.write(result) for var result = calculateVolume()

6) Requested variable n;, var result = isOdd(), and then 
document.write(result)
- set var n + 4
-then stated if (n%1 == 0)
return true;
else
return false;

7)Set var result = getSalePrices(used originalPrice (4.00), then said to 
document.write result based on... - 
-using a const saleAmount of .25
- using the function getSalePrice from (originalPrice)
-Set the saleAmount equal to OriginalPrice subtracting (the 
originalPrice * .25)
-returning saleAmount

8)Set var result = getSalePrices([used three differentprices]), then 
said to document.write result based on... - 
- a const salesAmounts = .25
- having the function getSalePrices (from the threeOriginalPrices)
- then making three variables for price one-three and setting them equal 
to the three index numbers of the array
- then three more variables for salesAmountsOne-Three and making them 
equal to getSalePrice(from priceOne-Three)
- Requested a return of [salesAmountsOne-Three]

9) In the HTML only adding incrementCounter(); between the script 
opening and closing then... - 
- In .js having a var counter = 0
- leaving function inc

--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
     // TODO: call your function here with any parameter value you'd like,
     // store the result in a variable, and then document.write() the result
     // e.g.:
-    var result = sayHello("Emily");
+    var result = sayHello("Cole");
     document.write(result);
   </script></div>
 
 
   <div class="question">(2) sayHelloEverybody(threeNames)</div>
   <div class="results"><script>
+
     // TODO: call your function here with any parameter value you'd like,
     // store the result in a variable, and then document.write() the result
+    var threeNames;
+    var result = sayHelloEverybody(threeNames);
+    document.write(result);
+
   </script></div>
 
 
@@ -26,35 +31,55 @@
   <div class="results"><script>
     // TODO: call your function here with any parameter value you'd like,
     // store the result in a variable, and then document.write() the result
+    var classes;
+    var result = getClasses(classes);
+    document.write(result);
   </script></div>
 
   <div class="question">(4) labelOrder(fiveNumbers)</div>
   <div class="results"><script>
     // TODO: call your function here with any parameter value you'd like,
     // store the result in a variable, and then document.write() the result
+    var fiveNumbers;
+    var result = labelOrder(fiveNumbers);
+    document.write(result);
   </script></div>
 
 
   <div class="question">(5) calculateVolume(w, l, h)</div>
   <div class="results"><script>
+
+  var result = calculateVolume()
+  document.write(result)
     // TODO: call your function here with any parameter value you'd like,
     // store the result in a variable, and then document.write() the result
   </script></div>
 
   <div class="question">(6) isOdd(n)</div>
   <div class="results"><script>
+
+  var n;
+  var result = isOdd();
+  document.write(result);
     // TODO: call your function here with any parameter value you'd like,
     // store the result in a variable, and then document.write() the result
   </script></div>
 
+
   <div class="question">(7) getSalePrice(originalPrice)</div>
   <div class="results"><script>
+
+  var result = getSalePrice(4.00);
+  document.write(result);
     // TODO: call your function here with any parameter value you'd like,
     // store the result in a variable, and then document.write() the result
   </script></div>
 
   <div class="question">(8) getSalePrices(threeOriginalPrices)</div>
   <div class="results"><script>
+
+  var result = getSalePrices([4.00, 5.99, 3.00]);
+  document.write(result);
     // TODO: call your function here with any parameter value you'd like,
     // store the result in a variable, and then document.write() the result
   </script></div>
@@ -62,7 +87,11 @@
   <div class="question">(9) incrementCounter()</div>
   <div class="results">
     <div id="counter"></div>
-    <script>showCounter()</script>
+    <script>
+
+    incrementCounter();
+    
+    </script>
   </div>
 
 </body>
